# netl-ap-map-flow

./: .coveragec  .gitignore  .travis.yml  .travis.yml   2DF_FLOW.F  2DF_OUTPUT.F  2D_MODULE.F  2D_SOLVER.F  2D_SUBROUTINES.F  APM_BULK_RUN.PY  APM_PROCESS_DATA_MAP.PY  AP_MAP_BULK_RUN.PY  AP_MAP_DATA_TOOLS.PY  FRACTURE_INITIALIZATION.INP  MANIFEST.in  OPENFOAM_EXPORT_SUBROUTINES.F  PROCESS_DATA_MAP.PY  README.rst  TestFracture-aperture-map.txt  appveyor.yml  bld.bat  codecov.yml  conda-requirements.txt  fracture-aperture.csv  fracture-flow-m.csv  fracture-flow-x.csv  fracture-flow-z.csv  fracture-log.txt  fracture-press.csv  fracture-stat.csv  fracture-stat.yaml  meta.yaml  model-input-params.inp  pyproject.toml  pytest.ini  requirements.txt  setup.py  test_requirements.txt
AVERAGED-FRACTURES/: Fracture2ApertureMap-10AVG.txt
ApertureMapModelTools/: UnitConversion.py  __core__.py  __init__.py  ap_map_flow.py  logging.conf
Examples/: FRAC_INIT.INP
PVT/: CO2_PVT.txt  H2O_TEMP_058F.CSV
SOURCE/: .gitignore  2DF_FLOW.F  2DF_OUTPUT.F  2D_MODULE.F  2D_SOLVER.F  2D_SUBROUTINES.F  APERTURE_MAP_FLOW.F  APM_FLOW.F  APM_MODULE.F  APM_OUTPUT.F  APM_SOLVER.F  APM_SUBROUTINES.F  D4_module.f90  FILE-DESCRIPTION.TXT  OPENFOAM_EXPORT.F  OPENFOAM_EXPORT_SUBROUTINES.F  UNIT_CONVERSION_MODULE.F  makefile
TEST-FRACTURES/: FILE-DESCRIPTION.TXT  PARALELL-PLATE-01VOX_INIT.INP
apmapflow/: __init__.py  ap_map_flow.py  logging.conf  unit_conversion.py
docs/: Makefile  conf.py  index.rst  make.bat
examples/: APM-MODEL-INPUT-FILE-TEMPLATE.INP  FRAC_INIT.INP  apm-model-inputs-template.inp  blockmeshdict-generation-example.rst  bulk-run-example.rst  openFOAM-export-example.rst  openfoam-example.rst  openfoam-export-example.rst  openfoamexport-example.rst  running-the-flow-model.rst  setup-instructions.rst  unit-conversion-examples.rst
misc/: README.rst  export_data_midplane  init-case-dir.py
scripts/: README.rst  apm-bulk-run.py  apm-color-stack-by-aperture.py  apm-combine-yaml-stat-files.py  apm-convert-csv-stats-file.py  apm-fracture-df.py  apm-generate-aperture-map.py  apm-open-foam-export.py  apm-parallel-mesh-generation.py  apm-process-data-map.py  apm-process-paraview-data.py  apm-resize-image-stack.py  apm-run-lcl-model.py  apm_bulk_run.py  apm_calculate_frac_offsets.py  apm_calculate_offset_map.py  apm_color_stack_by_aperture.py  apm_combine_yaml_stat_files.py  apm_covert_csv_stats_file.py  apm_fracture_df.py  apm_generate_aperture_map.py  apm_open_foam_export.py  apm_parallel_mesh_generation.py  apm_process_data_map.py  apm_process_image_stack.py  apm_process_paraview_data.py  apm_subtract_data_maps.py  export_data_midplane.py  init_case_dir.py  plot_open_foam_resid
source/: APERTURE_MAP_FLOW.F  APM_FLOW.F  APM_MODULE.F  APM_OUTPUT.F  APM_SOLVER.F  (+13 more)
(+259 files in other folders)
